Fix max width on small screens

--- a/src/style.css
+++ b/src/style.css
@@ -4,7 +4,7 @@ body {
 
 .container {
   margin-top: 10px;
-  max-width: 50%;
+  max-width: 800px;
   font-family: "Open Sans", sans-serif;
 }
 
